# minecraft-rs

./: .gitignore  Cargo.toml
.minecraft/: options.txt  usercache.json
.minecraft/assets/indexes/: 1.20.1.json
.minecraft/crash-reports/: crash-2025-08-03_21.34.26-client.txt  crash-2025-08-03_21.48.07-client.txt
.minecraft/saves/New World/: level.dat_old
.minecraft/saves/New World/advancements/: 00000000-0000-0000-0000-000000000000.json
.minecraft/saves/New World/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
.minecraft/saves/New World/playerdata/: 00000000-0000-0000-0000-000000000000.dat_old
.minecraft/saves/New World/poi/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
.minecraft/saves/New World/region/: r.-2.-1.mca  r.-2.0.mca
.minecraft/saves/New World/stats/: 00000000-0000-0000-0000-000000000000.json
.minecraft/saves/test/: level.dat_old
.minecraft/saves/test/advancements/: 00000000-0000-0000-0000-000000000000.json
.minecraft/saves/test/entities/: r.-1.-1.mca  r.0.-1.mca
.minecraft/saves/test/playerdata/: 00000000-0000-0000-0000-000000000000.dat_old
.minecraft/saves/test/poi/: r.-1.-1.mca  r.0.-1.mca
.minecraft/saves/test/region/: r.-1.-1.mca  r.-1.-2.mca  r.-1.0.mca  r.0.-2.mca  r.0.0.mca  r.1.-1.mca  r.1.-2.mca  r.1.0.mca
.minecraft/saves/test/stats/: 00000000-0000-0000-0000-000000000000.json
.minecraft/versions/1.20.1/natives/macos/arm64/org/lwjgl/stb/: liblwjgl_stb.dylib.sha1
src/: helpers.rs  install.rs  jvm.rs  main.rs  natives.rs  runtime.rs  types.rs  utils.rs
src/internal_types/: mod.rs  shared.rs  shared_jvm.rs
(+49 files in other folders)
